# Obstacle-avoidance

./: README.md  drive.py  k2tf_convert.py  model2.py  train.py
mpc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
mpc/src/: MPC.cpp  MPC.h  main.cpp
train/: waypoints.txt
